terraform/modules/ecs/aws_lb_listener_rule.tf
variable "http_arn" {}
variable "api_alb_target_group_arn" {}
variable "web_alb_target_group_arn" {}

# LbListenerRule for api
resource "aws_lb_listener_rule" "api-ecs" {
  listener_arn = var.http_arn
  priority     = 100
  action {
    type             = "forward"
    target_group_arn = var.api_alb_target_group_arn
  }
  condition {
    path_pattern {
      values = ["/api/*"]
    }
  }
}

# LbListenerRule for web
resource "aws_lb_listener_rule" "web-ecs" {
  listener_arn = var.http_arn
  priority     = 80
  action {
    type             = "forward"
    target_group_arn = var.web_alb_target_group_arn
  }
  condition {
    path_pattern {
      values = ["*"]
    }
  }
}
